--- a/Progetto Settimana 1/Esercizio/css/style.css
+++ b/Progetto Settimana 1/Esercizio/css/style.css
@@ -99,7 +99,6 @@ li p:first-child{
     text-align: center;
     padding:2em;
     font-size: 1rem;
-    margin-bottom: 4rem;
 }
 
 .section3 h4{
@@ -129,6 +128,11 @@ li p:first-child{
 }
 
 /*SECTION 4*/
+
+.section4{
+    margin-top: 4rem;
+}
+
 .section4 div img{
     display: block;
     margin-left: auto;
